--- a/.github/workflows/build_mingw.yml
+++ b/.github/workflows/build_mingw.yml
@@ -15,12 +15,12 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get update -qq && sudo apt-get install -y
           cmake
+          libsdl1.2-dev libsdl-image1.2-dev libsdl-mixer1.2-dev zlib1g-dev
           binutils-mingw-w64-x86-64
           g++-mingw-w64-x86-64-posix
           g++-mingw-w64-x86-64
           libsdl2-mixer-dev
           zlib1g
-          zlib1g-dev
       - name: Install SDL2
         run: |
           curl -L https://github.com/mmatyas/supermariowar/releases/download/v2.0-beta.0/i686-w64-mingw32_mixerx.tar.xz | tar xJf - -C /tmp/
